--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 <article>
                                     <header>
                                         
-                                        <h2>SQL Project</h2>
+                                        <h2>SQL Projects</h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="image fit"><img src="images/SQL-Server-Logo.jpg" alt="" /></a>
                                     <p>Here is a link to my most recent SQL project/database designs. The projects can be downloaded and/or viewed via screenshots</p>
