--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                                 <article>
                                     <header>
                                         
-                                        <h2>Tableau Projects/Dashboards</h2>
+                                        <h2>Tableau Projects</h2>
                                     </header>
                                     <a href="https://public.tableau.com/app/profile/kevinchongtai" class="image fit"><img src="images/tableau-logo-USE-THIS-ONE.png" alt="" /></a>
                                     <p>Here is a link to my favorite and most visually aeshetic Tableau dashboards</p>
@@ -78,7 +78,7 @@
                                         <h2>SQL Projects</h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="image fit"><img src="images/SQL-Server-Logo.jpg" alt="" /></a>
-                                    <p>Here is a link to my most recent SQL project/database designs. The projects can be downloaded and/or viewed via screenshots</p>
+                                    <p>Here is a link to my most recent SQL database designs. These projects can be downloaded and/or viewed via screenshots</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="button">View Projects</a></li>
                                     
