--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 <section>
     <h3>Email</h3>
     <p><a href="mailto:kevinchongtai@hotmail.com">kevinchongtai@hotmail.com</a></p>
-
+<h3>LinkedIn</h3>
+    <p><a href="https://www.linkedin.com/in/kevinctai/">linkedin.com/in/kevinctai/</a></p>
+    
     </ul>
 </section>
 </section>
