--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="image fit"><img src="images/vis studio logo.jpeg" alt="" /></a>
                                     <p>Here is a link to the coding I did to create this website</p>
                                     <ul class="actions special">
-                                        <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="button">View Projects</a></li>
+                                        <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="button" target="_blank>View Projects</a></li>
                                     </ul>
                                 </article>
                                 <article>
