--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                                         
                                         <h2>Visual Studio HTML Website Building</h2>
                                     </header>
-                                    <a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="image fit"><img src="images/vis studio logo.jpeg" alt="" /></a>
+                                    <a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" target="_blank" class="image fit"><img src="images/vis studio logo.jpeg" alt="" /></a>
                                     <p>Here is a link to the coding I did to create this website</p>
                                     <ul class="actions special">
-                                        <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="button" target="_blank>View Projects</a></li>
+                                        <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" target="_blank" class="button" target="_blank>View Projects</a></li>
                                     </ul>
                                 </article>
                                 <article>
