--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         
                                         <h2>Visual Studio HTML Website Building</h2>
                                     </header>
-                                    <a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="image fit"><img src="images/vis studio logo.jpeg" alt="" target="blank" rel="noopener noreferrer"></a>
+                                    <a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/vis studio logo.jpeg" alt="" /></a>
                                     <p>Here is a link to the coding I did to create this website</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwyPOpTxGTiSmBTjF?e=PbwNtH" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
