--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <!-- Intro -->
                     <div id="intro">
                         <h1>Kevin's Project Portfolio</h1>
-                        <p>Software Programming, Database Management, and Statistical Modeling Projects of Kevin Chong Tai</p>
+                        <p>Data analysis, Databse management, and Software Programming Projects of Kevin Chong Tai</p>
                         <ul class="actions">
                             <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
                         </ul>
@@ -45,10 +45,10 @@
 
  <h2>Tableau Projects</h2>
                                     </header>
-                                    <a href="https://public.tableau.com/app/profile/kevinchongtai" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/tableau-logo-USE-THIS-ONE.png" alt="" /></a>
-                                    <p>Here is a link to my favorite and most visually aeshetic Tableau dashboards</p>
+                                    <a href="https://1drv.ms/f/c/8abd13b4725dc7d5/Ev7zOMn33xtCnEzpjpCGGIMBiWOYJ182OTEaoDr4Rg8yIA?e=UqbOMp" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/power bi.png" alt="" /></a>
+                                    <p>Power BI Dashboards</p>
                                     <ul class="actions special">
-                                        <li><a href="https://public.tableau.com/app/profile/kevinchongtai" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
+                                        <li><a href="https://1drv.ms/f/c/8abd13b4725dc7d5/Ev7zOMn33xtCnEzpjpCGGIMBiWOYJ182OTEaoDr4Rg8yIA?e=JCmgTn" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
                                 </article>
                                 <article>
@@ -59,7 +59,7 @@
                                         <h2>Tableau Projects</h2>
                                     </header>
                                     <a href="https://public.tableau.com/app/profile/kevinchongtai" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/tableau-logo-USE-THIS-ONE.png" alt="" /></a>
-                                    <p>Here is a link to my favorite and most visually aeshetic Tableau dashboards</p>
+                                    <p>Tableau Dashboards</p>
                                     <ul class="actions special">
                                         <li><a href="https://public.tableau.com/app/profile/kevinchongtai" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
@@ -70,7 +70,7 @@
                                         <h2>Excel Projects<h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/excel logo.jpeg" alt="" /></a>
-                                    <p>Here is a link that schowcases a couple of my excel projects to demonstrate my proficiency with the program</p>
+                                    <p>Excel Projects</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
@@ -81,7 +81,7 @@
                                         <h2>SQL Projects</h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/SQL-Server-Logo.jpg" alt="" /></a>
-                                    <p>Here is a link to my most recent SQL database designs. These projects can be downloaded and/or viewed via screenshots</p>
+                                    <p>SQL Projects</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     
