--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                                     <header>
                                         
 
- <h2>Tableau Projects</h2>
+ <h2>Power BI Projects</h2>
                                     </header>
                                     <a href="https://1drv.ms/f/c/8abd13b4725dc7d5/Ev7zOMn33xtCnEzpjpCGGIMBiWOYJ182OTEaoDr4Rg8yIA?e=UqbOMp" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/power bi.png" alt="" /></a>
-                                    <p>Power BI Dashboards</p>
+                                    <p>Relevant Power BI dashboards showcased with pbix and png files</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/c/8abd13b4725dc7d5/Ev7zOMn33xtCnEzpjpCGGIMBiWOYJ182OTEaoDr4Rg8yIA?e=JCmgTn" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
@@ -59,7 +59,7 @@
                                         <h2>Tableau Projects</h2>
                                     </header>
                                     <a href="https://public.tableau.com/app/profile/kevinchongtai" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/tableau-logo-USE-THIS-ONE.png" alt="" /></a>
-                                    <p>Tableau Dashboards</p>
+                                    <p>Relevant Tableau dashboards viewed from tableau.com</p>
                                     <ul class="actions special">
                                         <li><a href="https://public.tableau.com/app/profile/kevinchongtai" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
@@ -70,7 +70,7 @@
                                         <h2>Excel Projects<h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/excel logo.jpeg" alt="" /></a>
-                                    <p>Excel Projects</p>
+                                    <p>Excel Projects showcased using xlsx and xlsm files on One Drive X</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
@@ -81,7 +81,7 @@
                                         <h2>SQL Projects</h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/SQL-Server-Logo.jpg" alt="" /></a>
-                                    <p>SQL Projects</p>
+                                    <p>SQL Projects displayed with ldf, mdf, and pdf image files on One Drive</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72KwzU0DHyC90GaLpB-?e=rXUQXA" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     
