--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
     </head>
     <body class="is-preload">
+        
 
         <!-- Wrapper -->
             <div id="wrapper" class="fade-in">
@@ -20,7 +21,7 @@
                 <!-- Intro -->
                     <div id="intro">
                         <h1>Kevin's Project Portfolio</h1>
-                        <p>Data analysis, Databse management, and Software Programming Projects of Kevin Chong Tai</p>
+                        <p>Data Analysis, Databse management, and Software Programming Projects of Kevin Chong Tai</p>
                         <ul class="actions">
                             <li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
                         </ul>
