--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                         <h2>Excel Projects<h2>
                                     </header>
                                     <a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="image fit" target="blank" rel="noopener noreferrer"><img src="images/excel logo.jpeg" alt="" /></a>
-                                    <p>Excel Projects showcased using xlsx and xlsm files on One Drive X</p>
+                                    <p>Excel Projects showcased using xlsx and xlsm files on One Drive</p>
                                     <ul class="actions special">
                                         <li><a href="https://1drv.ms/f/s!AtXHXXK0E72Kwx1lpSNQt7ClqFTd?e=bsFkov" class="button" target="blank" rel="noopener noreferrer">View Projects</a></li>
                                     </ul>
